apps/example-apps/simple-web-server/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-web-server
    component: web-server
  name: simple-web-server
  namespace: replace-me
spec:
  ports:
  - name: 8080-80
    port: 8080
    protocol: TCP
    targetPort: 8000
  selector:
    app: simple-web-server
    component: web-server
  type: ClusterIP
