apps/example-apps/simple-web-server/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: simple-web-server
  namespace: replace-me
  labels:
    app: simple-web-server
    component: web-server
spec:
  host: simple-web-server
  port:
    targetPort: 8000
  to:
    kind: Service
    name: simple-web-server
